--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 }
 .topnav {
     overflow: hidden;
-    background-color: #8b0000;
+    background-color: darkred;
     border-radius: 10px;
     max-width: 1100px;
     margin: 10px auto;
@@ -47,7 +47,7 @@ body {
 }
 .reading {
     font-size: 1.2rem;
-    color: #8b0000;
+    color: darkred;
 }
 
 .email-submit {
